@@ -1884,3 +1884,19 @@
                              0))
                     (funcall #'%f2))))
          (%f1))))))
+
+(with-test (:name :dynamic-extent-conditional-allocation.partial)
+  (let ((sb-c::*check-consistency* t))
+    (checked-compile-and-assert
+     ()
+     '(lambda (test y z)
+       (let ((x (if test
+                    (cons (cons y y) z)
+                    nil)))
+         (declare (dynamic-extent x))
+         (when test
+           (assert (sb-ext:stack-allocated-p x)))
+         (and x
+              (* (car (car x)) (cdr x)))))
+     ((t 4 5) 20)
+     ((nil 4 5) nil))))
