@@ -1,5 +1,11 @@
 ;;;; -*- coding: utf-8; fill-column: 78 -*-
 
+changes relative to sbcl-2.3.7:
+  * enhancement: Stack allocation via DYNAMIC-EXTENT is now possible for
+    conditionals even when not all branches are stack-allocatable. Previously
+    all branches needed to be stack-allocatable for the otherwise-inaccessible
+    subparts to get stack allocated.
+
 changes in sbcl-2.3.7 relative to sbcl-2.3.6:
   * minor incompatible change: MACROLET macro functions are now compiled with
     (SPEED 1), leading to fewer efficiency notes being emitted when compiled
